opam-version: "1.2"
name: "stylesheet"
maintainer: "atthecodeface@gmail.com"
author: "atthecodeface@gmail.com"
homepage: ""
bug-reports: ""
license: ""
dev-repo: ""

version: "dev"

build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build}
  "re"
  "batteries"
]
available: [ ocaml-version >= "4.04.0" ]
