opam-version: "1.2"
name: "stylesheet_ml"
maintainer: "atthecodeface@gmail.com"
author: "atthecodeface@gmail.com"
homepage: ""
bug-reports: ""
license: ""
dev-repo: ""

version: "dev"

build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build}
  "stylesheet"
  "re"
  "structured_doc"
  "batteries"
]
available: [ ocaml-version >= "4.04.0" ]
